Using non-jdk8 profile